v1.1.2 - Fix barely visible scrollbars

--- a/src/modules/Core/default-variables.scss
+++ b/src/modules/Core/default-variables.scss
@@ -139,9 +139,6 @@
     --interactive-normal: rgb(var(--ctp-surface0));
     --interactive-hover: rgb(var(--ctp-surface1));
     --interactive-success: rgb(var(--ctp-green));
-    --scrollbar-active-thumb-bg: rgba(var(--ctp-base), 0.2);
-    --scrollbar-bg: rgba(var(--ctp-crust), 0.05);
-    --scrollbar-thumb-bg: rgba(var(--ctp-mantle), 0.1);
     --workspace-background-translucent: rgba(var(--ctp-crust), 0.6);
     --blockquote-background-color: rgba(var(--ctp-crust), 0.5);
     --width-image-gallery: 200px;
