--- a/theme.css
+++ b/theme.css
@@ -1207,9 +1207,6 @@ settings:
   --interactive-normal: rgb(var(--ctp-surface0));
   --interactive-hover: rgb(var(--ctp-surface1));
   --interactive-success: rgb(var(--ctp-green));
-  --scrollbar-active-thumb-bg: rgba(var(--ctp-base), 0.2);
-  --scrollbar-bg: rgba(var(--ctp-crust), 0.05);
-  --scrollbar-thumb-bg: rgba(var(--ctp-mantle), 0.1);
   --workspace-background-translucent: rgba(var(--ctp-crust), 0.6);
   --blockquote-background-color: rgba(var(--ctp-crust), 0.5);
   --width-image-gallery: 200px;
@@ -2627,9 +2624,6 @@ body.anp-colorful-frame.anp-card-layout .workspace,
 }
 .anp-full-rainbow-color-toggle .nav-file {
   overflow-y: hidden;
-}
-.anp-full-rainbow-color-toggle .nav-file::-webkit-scrollbar {
-  display: none;
 }
 .anp-full-rainbow-color-toggle .nav-file-title-content.is-being-renamed, .anp-full-rainbow-color-toggle .nav-folder-title-content.is-being-renamed {
   cursor: text;
